# vocab

./: main.py  pyproject.toml
axomeapis/: antixsrf.py  auth.py  emoji.py  sitemap.py
static/: prerequisite.js  script.js  styles.css
templates/: base.html  home.html  index.html  login.html  welcome.html
templates/components/: all.html  flashing.html  navbar.html
templates/components/editor/: editor.js  sidebar.html  workspace.html
templates/learn/: cards.html  knowledge.html  learn.js
templates/learn/cards/: sidebar.html  workspace.html
templates/learn/knowledge/: workspace.html
templates/new/: set.html
templates/views/: editor.html  explore.html  set.html  training.html
